# CoupaDownloads

./: .PoetryHandbook.md  .coverage  .env.example  .gitignore  .python-version.example  AGENTS.md  ARCHITECTURE.md  E2E_FLOW_DIAGRAM.md  EDGEDRIVER_138_BUNDLE_SUMMARY.md  EDGEDRIVER_138_FINAL_SUMMARY.md  GEMINI.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_BACKUP.md  NETWORK_ISSUE_SOLUTION.md  PATH_FIXES_SUMMARY.md  PROFILE_PROTECTION.md  PROJECT_INTEGRITY_REPORT.md  README.md  README_Offline.md  README_WINDOWS.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  REMOVED_AUTO_DOWNLOAD_SUMMARY.md  THREAD_IMPLEMENTATION_REPORT.md  USAGE_INSTRUCTIONS.md  WINDOWS_BUNDLE_FINAL_SUMMARY.md  WINDOWS_BUNDLE_README.md  WINDOWS_TROUBLESHOOTING.md  alembic.ini  benchmark_results.json  benchmark_workers.py  browser.py  build_exe_from_macos.py  build_portable.py  build_portable_advanced.py  build_portable_interactive.py  build_portable_simple.py  build_single_exe.py  build_single_exe_excel_workflow.py  build_single_exe_integrated.py  (+76 more)
.github/: copilot-instructions.md  pull_request_template.md
.roo/: mcp.json
Legacy and Test Files/: debug_po_statuses.py  test_e2e_all_scenarios.py  test_enhanced_main_system.py  test_error_page_detection.py  test_hierarchical_movement.py  test_hierarchy_fix.py  test_parallel_csv_control.py  test_po15177580.py  test_po16928033_fix.py  test_simple_download.py  test_status_fix.py
MyScript/: FINAL_STRUCTURE_REPORT.md  __init__.py  browser_tab_manager.py  coupa_inventory_collector.py  coupa_workflow_orchestrator.py  download_services.py  edge_profile_protection.py  profile_config.py  retry_advanced.py  selenium_beautifulsoup_processor.py  ui_component_interfaces.py
PR_PLANS/: 01-driver-per-worker-design-doc.md  02-parallel-downloads-per-worker-design-doc.md  03-propagacao-campos-para-csv.md  04-fix-ui-parallel.md  05-combined-optimizations-proposta.md  05-combined-optimizations-sequence.mermaid  06-escrita-segura-csv.md  07-documentacao-csv-status.md  07-msg-to-pdf-design-doc.md  07-msg-to-pdf-proposta.md  07-msg-to-pdf-relatorio-implementacao.md  09-edge-automatic-downloads-design-doc.md  09-edge-automatic-downloads-proposta.md  09-edge-automatic-downloads.md  10-ci-workflow-design-doc.md  10-ci-workflow-proposta.md  10-ci-workflow.md  11-15-p0-p1-fixes-relatorio-implementacao.md  11-p0-critical-correctness-fixes-proposta.md  12-p0-async-sync-boundary-fix-proposta.md  13-p1-worker-startup-performance-proposta.md  14-p1-config-type-safety-proposta.md  15-p1-integration-test-coverage-proposta.md  15-rename-subprojects-design-doc.md  15-rename-subprojects-proposta.md  15-rename-subprojects.md  16-ollama-httpx-bump.md  17-fix-rag-imports.md  18-advanced-extractor-upgrades.md  20-feedback-loop.md  21-model-management-and-preference-ui-design-doc.md  21-model-management-and-preference-ui.md  22-external-llm-critique-and-autotraining.md  22-pipeline-init-and-english-ui-design-doc.md  22-pipeline-init-and-english-ui-proposta.md  22-pipeline-init-and-english-ui.md  25-single-session-profile-multi-window-workers-design-doc.md  25-single-session-profile-multi-window-workers-proposta.md  26-csv-supplier-preserve-and-error-summaries-design-doc.md  26-csv-supplier-preserve-and-error-summaries-proposta.md  (+23 more)
debug_15891008/: 15891008_source.html
debug_16369913/: 16369913_elements.txt  16369913_source.html
docs/: COMPLETE_SOLUTION.md  CORRECTED_PROGRESS_IMPLEMENTATION.md  ENHANCED_PROGRESS_SUMMARY.md  ENHANCED_PROGRESS_SYSTEM.md  EXCEL_COMPATIBILITY_GUIDE.md  EXCEL_COMPATIBILITY_SUMMARY.md  EXCEL_MIGRATION_ANALYSIS.md  FILE_REPLACEMENT_IMPROVEMENTS.md  FILE_TYPE_RESTRICTIONS.md  FINAL_RELEASE_SUMMARY.md  FINAL_TEST_SUMMARY.md  GEMINI.md  HITL_FEEDBACK_WORKFLOW.md  IMPROVEMENTS_SUMMARY.md  LLM_ASSISTED_TRAINING.md  MODEL_MANAGEMENT.md  MSG_PROCESSING_FEATURE.md  OUTPUT_IMPROVEMENTS.md  PO16277411_ANALYSIS_REPORT.md  README.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  SANDBOX_TESTING_SUMMARY.md  STACK_TRACE_SUPPRESSION.md  TEST_RESULTS_SUMMARY.md  USER_GUIDE.md  api-test-sequence.md  browser.md  core_interfaces.md  csv_processor.md  csv_processor_plain_text.md  downloader.md  frontend-tailwind-shadcn-guia.md  po16277411_analysis_20250728_131920.json  profile_troubleshooting.md  system_overview_plain_text.md  (+3 more)
embeddinggemma_feasibility/: COUPA_FIELDS_GUIDE.md  FINAL_TECHNOLOGY_TABLE.md  NLP_LIBRARIES_GUIDE.md  PDF_EXTRACTION_GUIDE.md  PROGRESSIVE_IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  TECHNOLOGY_REPORT.md  TECHNOLOGY_STATUS_TABLE.md  TEST_RESULTS.md  __init__.py  advanced_coupa_field_extractor.py  batch_processor.py  cache_utils.py  capability_assessment.py  config.py  content_loader.py  contract_data_trainer.py  entity_parsing.py  filename_signals.py  fully_customized_extractor.py  improved_coupa_extractor.py  integration_tests.py  interactive_cli.py  pdf_information_extractor.py  performance_benchmarks.py  po_aggregator.py  pyproject.toml  rag_assisted_extraction.py  review_cli.py  sentence_transformer_customizer.py  test_single_pdf.py  use_case_examples.py
embeddinggemma_feasibility/PR_PLANS/Implemented/: 01-rag-libs.md  02-interactive-cli.md  03-remover-extrator-basico.md  04-cli-extrator-avancado.md  05-extrator-avancado-rag.md  06-ml-hardening-e-anti-alucinacao.md
embeddinggemma_feasibility/data/: advanced_coupa_fields_extrac.textClipping  training_analysis.json
embeddinggemma_feasibility/data/rag_index/: config.json  default__vector_store.json  docstore.json  index_store.json
embeddinggemma_feasibility/docs/: RAG_MINIMAL.md
embeddinggemma_feasibility/models/sentence_transformer_custom/: contract_config.json  contract_embeddings.json
embeddinggemma_feasibility/models/spacy_custom/: custom_patterns.json
embeddinggemma_feasibility/models/spacy_custom/custom_contract_model/ner/: moves
embeddinggemma_feasibility/rag/: __init__.py  cli.py  config.py  index.py  ingest.py  rerank.py  retrieve.py  splitters.py
embeddinggemma_feasibility/reports/: coupa_fields_extraction_20250910_172413_report.md  coupa_fields_extraction_20250910_172703_report.md
(+794 files in other folders)
