[tool.poetry]
name = "coupadownloads"
version = "0.1.0"
description = ""
authors = ["CzarX86 <julio.cezar@outlook.com>"]
readme = "README.md"
package-mode = true
packages = [
  { include = "embeddinggemma_feasibility" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = ">=4.0.0"
requests = ">=2.31.0"
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"
psutil = ">=5.9.0"
extract-msg = ">=0.41.0"
weasyprint = ">=60.0"
pdfkit = ">=1.0.0"
webdriver-manager = "^4.0.2"
rich = "^14.1.0"
textual = "^0.58.0"
cleanlab = "^2.4.0"
playwright = "^1.40.0"
tenacity = "^8.2.0"
structlog = "^23.0.0"
polars = "^0.20.0"
httpx = "^0.27.0"
aiofiles = "^23.0.0"
pydantic = "^2.5.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
pydantic-settings = "^2.10.1"
xlsx2csv = "^0.8.4"
customtkinter = "^5.2.2"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.7"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
pytest = ">=7.4.0"
pytest-mock = ">=3.11.0"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.0.0"
pytest-timeout = ">=2.0.0"
pytest-html = ">=3.0.0"
pytest-asyncio = ">=1.1.0"
pytest-benchmark = ">=4.0.0"
freezegun = ">=1.2.0"
factory-boy = ">=3.2.0"
faker = ">=18.0.0"
label-studio-sdk = ">=0.0.30,<0.1"
pymupdf = ">=1.23.0"
sentence-transformers = ">=2.2.2"
transformers = ">=4.35.0"
torch = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
huggingface-hub = ">=0.17.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"
memory-profiler = ">=0.61.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
plotly = ">=5.15.0"
pytesseract = ">=0.3.10"
pillow = ">=10.0.0"
llama-index = ">=0.14.1"
llama-index-embeddings-huggingface = ">=0.1.0"
llama-index-vector-stores-hnswlib = ">=0.1.0"
hnswlib = ">=0.8.0"
diskcache = ">=5.6.1"
ollama = ">=0.5.4,<0.6.0"
mlflow = ">=2.0.0"

[tool.poetry.scripts]
coupa-downloader = "src.main:main"
rag-cli = "embeddinggemma_feasibility.interactive_cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
