[project]
name = "coupadownloads"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "psutil>=5.9.0",
    "webdriver-manager>=4.0.2,<5",
    "textual>=0.58.0,<1",
    "playwright>=1.40.0",
    "structlog>=23.0.0,<24",
    "httpx>=0.27.0,<0.28",
    "pydantic-settings>=2.10.1,<3",
    "extract-msg>=0.51.0",
    "fpdf2>=2.7.9,<3",
]

[project.scripts]
coupa-downloader = "src.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10.0.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "huggingface-hub>=0.17.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "llama-index>=0.14.1",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-vector-stores-hnswlib>=0.1.0",
    "hnswlib>=0.8.0",
    "mlflow>=2.0.0",
    "cleanlab>=2.4.0,<3",
]
media = [
    "weasyprint>=60.0",
    "pdfkit>=1.0.0",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.23.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "label-studio-sdk>=0.0.30,<0.1",
    "diskcache>=5.6.1",
    "ollama>=0.5.4,<0.6.0",
]
web = [
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
]
db = [
    "sqlalchemy>=2.0.36,<3",
    "alembic>=1.13.3,<2",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]
