[tool.poetry]
name = "embeddinggemma_feasibility"
version = "0.1.0"
description = "Feasibility assessment for EmbeddingGemma in Coupa field extraction"
authors = ["CzarX86 <julio.cezar@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
